Fix wrong font-family

--- a/static/bullpup/components/home/style.css
+++ b/static/bullpup/components/home/style.css
@@ -34,7 +34,7 @@ body  {
 }
 
 .pane-1 h1 {
-  font-family: display;
+  font-family: FinancierDisplay;
   margin: 0;
   color: white;
   font-weight: bold;
